force-app/main/default/objects/SSP_Member__c/SSP_Member__c.object-meta.xml
<CustomObject>
    <description>Stores details about an individual member of a case/application such as gatepost reponse, incarceration, disability, living arrangement, pregnancy, address details. Also repurposed to store information of different individuals in the form of individual alien, alien sponsor, care taker,  care coordinator etc.</description>
    <label>SSP Member</label>
    <nameField>
        
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        
        <label>SSP_Member Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>SSP Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>