force-app/main/default/objects/SSP_Member__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>This field is used to calculate the Age of a member using Date of birth</description>
    <formula>IF( NOT( ISBLANK( BirthDate__c ) ) , IF( DATE( 2000 , MONTH( BirthDate__c ) ,
 DAY( BirthDate__c ) ) &lt;= DATE( 2000 , MONTH( 
IF(ISNULL($Setup.TimeTravelSetting__c.Today__c),TODAY(),$Setup.TimeTravelSetting__c.Today__c ) ) , DAY( 
IF(ISNULL($Setup.TimeTravelSetting__c.Today__c),TODAY(),$Setup.TimeTravelSetting__c.Today__c ) ) ), YEAR (
IF(ISNULL($Setup.TimeTravelSetting__c.Today__c),TODAY(),$Setup.TimeTravelSetting__c.Today__c )) - 
YEAR ( BirthDate__c ), YEAR (
IF(ISNULL($Setup.TimeTravelSetting__c.Today__c),TODAY(),$Setup.TimeTravelSetting__c.Today__c )) - YEAR ( BirthDate__c ) -1 ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>