force-app/main/default/objects/SSP_Member__c/fields/AgeAtFosterCare__c.field-meta.xml
<CustomField>
    <fullName>AgeAtFosterCare__c</fullName>
    <description>This field is used to store age of the individual when he was at foster care</description>
    <label>Age at Foster Care</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>