force-app/main/default/objects/SSP_Member__c/fields/Alias_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Alias_First_Name__c</fullName>
    <description>This field is used to store Alias First Name on a Member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Alias First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>