force-app/main/default/objects/SSP_Member__c/fields/AlienNumber__c.field-meta.xml
<CustomField>
    <fullName>AlienNumber__c</fullName>
    <description>This field is used to store Alien Number</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Alien Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>