force-app/main/default/objects/SSP_Member__c/fields/AlienSponserVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>AlienSponserVerificationCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field used to store verification code during alien sponsor verification</description>
    <label>AlienSponserVerificationCode</label>
    <type>Checkbox</type>
</CustomField>