force-app/main/default/objects/SSP_Member__c/fields/AlienTypeCode__c.field-meta.xml
<CustomField>
    <fullName>AlienTypeCode__c</fullName>
    <description>This field is used to store Alien type code for an Alien Sponsor</description>
    <label>Alien Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>AlienType</valueSetName>
        
        </valueSet>
</CustomField>