force-app/main/default/objects/SSP_Member__c/fields/BenefitTypeCode__c.field-meta.xml
<CustomField>
    <fullName>BenefitTypeCode__c</fullName>
    <description>This field is used to store disability benefits type</description>
    <label>Disability Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BlindnessDisabilityStatus</valueSetName>
        
        </valueSet>
</CustomField>