force-app/main/default/objects/SSP_Member__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>This field is used to store Date of birth of a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>