force-app/main/default/objects/SSP_Member__c/fields/BlindnessBenefitTypeCode__c.field-meta.xml
<CustomField>
    <fullName>BlindnessBenefitTypeCode__c</fullName>
    <description>This field is used to store Benefits provided regarding disability for a citizen</description>
    <label>Blindness Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>BlindnessDisabilityStatus</valueSetName>
        
        </valueSet>
</CustomField>