force-app/main/default/objects/SSP_Member__c/fields/BlindnessHasEndStageRenalDisease__c.field-meta.xml
<CustomField>
    <fullName>BlindnessHasEndStageRenalDisease__c</fullName>
    <description>This field is used to store Whether there is a RenalStageDisease for Blindness</description>
    <label>ESRD -Blindness?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>