force-app/main/default/objects/SSP_Member__c/fields/BlindnessParentUnableToCareForChild__c.field-meta.xml
<CustomField>
    <fullName>BlindnessParentUnableToCareForChild__c</fullName>
    <description>This field is used to indicate whether the member is unable to take care - blindness</description>
    <label>Unable to take Care - Blindness?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>