force-app/main/default/objects/SSP_Member__c/fields/BlindnessStatus__c.field-meta.xml
<CustomField>
    <fullName>BlindnessStatus__c</fullName>
    <description>This field is used to store status provided regarding blindness for a citizen</description>
    <label>Blindness Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PermanentOrTemporary</valueSetName>
        
        </valueSet>
</CustomField>