force-app/main/default/objects/SSP_Member__c/fields/BlindnessVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>BlindnessVerificationCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store Blindness Verification Code</description>
    <label>BlindnessVerificationCode</label>
    <type>Checkbox</type>
</CustomField>