force-app/main/default/objects/SSP_Member__c/fields/CanBuyCookWithHOH__c.field-meta.xml
<CustomField>
    <fullName>CanBuyCookWithHOH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether member can buy and cook meals with head of household</description>
    <label>Buy and Cook Meals with HOH ?</label>
    <type>Checkbox</type>
</CustomField>