force-app/main/default/objects/SSP_Member__c/fields/CheckingAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>CheckingAccountNumber__c</fullName>
    <description>This field is used to store Checking Account Number for Preferred Payment method</description>
    <label>Checking Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>