force-app/main/default/objects/SSP_Member__c/fields/CitizenshipNumber__c.field-meta.xml
<CustomField>
    <fullName>CitizenshipNumber__c</fullName>
    <description>This field is used to store Citizenship number for a member</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Citizenship Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>