force-app/main/default/objects/SSP_Member__c/fields/CitizenShipVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>CitizenShipVerificationCode__c</fullName>
    <description>This field is populated from MCI merged service as part of SSA Call and will need in SSP-DC call.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>CitizenShipVerificationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>