force-app/main/default/objects/SSP_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>This field is used to indicate the related contact for a member</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SSP_Member</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>