force-app/main/default/objects/SSP_Member__c/fields/CountryOfIssuanceCode__c.field-meta.xml
<CustomField>
    <fullName>CountryOfIssuanceCode__c</fullName>
    <description>This field is used to store Country</description>
    <label>Country of Issuance</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPCountry</valueSetName>
        
        </valueSet>
</CustomField>