force-app/main/default/objects/SSP_Member__c/fields/DCAlienSponsorRelationship__c.field-meta.xml
<CustomField>
    <fullName>DCAlienSponsorRelationship__c</fullName>
    <description>This field is used to store Alien Sponsor Relationship Id </description>
    <externalId>true</externalId>
    <label>DC Alien Sponsor Relationship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>