force-app/main/default/objects/SSP_Member__c/fields/DCBS_OfficeId__c.field-meta.xml
<CustomField>
    <fullName>DCBS_OfficeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DCBS OfficeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>