force-app/main/default/objects/SSP_Member__c/fields/DCEMCId__c.field-meta.xml
<CustomField>
    <fullName>DCEMCId__c</fullName>
    <description>This field is used to store DC id for Emergency medical condition</description>
    <label>DCEMCId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>