force-app/main/default/objects/SSP_Member__c/fields/DCId__c.field-meta.xml
<CustomField>
    <fullName>DCId__c</fullName>
    <description>This field used to store the unique member DC Id to identify for an external system</description>
    <externalId>true</externalId>
    <label>DCId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>