force-app/main/default/objects/SSP_Member__c/fields/DCInternalAlienSponsorId__c.field-meta.xml
<CustomField>
    <fullName>DCInternalAlienSponsorId__c</fullName>
    <description>This field is used to determine DC Id of internal alien sponsor</description>
    <externalId>true</externalId>
    <label>DC internal Alien Sponsor Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>