force-app/main/default/objects/SSP_Member__c/fields/DCLAHospitalizationId__c.field-meta.xml
<CustomField>
    <fullName>DCLAHospitalizationId__c</fullName>
    <description>Field to capture DC Id of Living Arrangement Hospitalization ID</description>
    <label>DCLAHospitalizationId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>