force-app/main/default/objects/SSP_Member__c/fields/DCMailingAddressId__c.field-meta.xml
<CustomField>
    <fullName>DCMailingAddressId__c</fullName>
    <description>This field is used as an external Id to map Mailing address from dot net table to member object</description>
    <externalId>true</externalId>
    <label>DCMailingAddressId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>