force-app/main/default/objects/SSP_Member__c/fields/DCMemberHighestEducationLevelDetailsId__c.field-meta.xml
<CustomField>
    <fullName>DCMemberHighestEducationLevelDetailsId__c</fullName>
    <description>This field used to store the unique member Highest education details to identify for an external system</description>
    <externalId>true</externalId>
    <label>DCMemberHighestEducationLevelDetailsId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>