force-app/main/default/objects/SSP_Member__c/fields/DCMemberLivingArrangementId__c.field-meta.xml
<CustomField>
    <fullName>DCMemberLivingArrangementId__c</fullName>
    <description>This field used to store the unique Living arrangement for member to identify for an external system</description>
    <externalId>true</externalId>
    <label>DCMemberLivingArrangementId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>