force-app/main/default/objects/SSP_Member__c/fields/DCMemberProfileId__c.field-meta.xml
<CustomField>
    <fullName>DCMemberProfileId__c</fullName>
    <description>This field used to store the unique Member profile id to identify for an external system</description>
    <externalId>true</externalId>
    <label>DCMemberProfileId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>