force-app/main/default/objects/SSP_Member__c/fields/DCMemberWorkReqExemptionId__c.field-meta.xml
<CustomField>
    <fullName>DCMemberWorkReqExemptionId__c</fullName>
    <description>This field used to store the unique member work requirement exemption to identify for an external system</description>
    <externalId>true</externalId>
    <label>DCMemberWorkReqExemptionId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>