force-app/main/default/objects/SSP_Member__c/fields/DCPhysicalAddressId__c.field-meta.xml
<CustomField>
    <fullName>DCPhysicalAddressId__c</fullName>
    <description>This field used to store the unique physical address Id to identify for an external system</description>
    <externalId>true</externalId>
    <label>DCPhysicalAddressId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>