force-app/main/default/objects/SSP_Member__c/fields/DCPregnancyId__c.field-meta.xml
<CustomField>
    <fullName>DCPregnancyId__c</fullName>
    <description>This field used to store the unique pregnancy details to identify for an external system</description>
    <externalId>true</externalId>
    <label>DCPregnancyId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>