force-app/main/default/objects/SSP_Member__c/fields/DCRecoveryIllnessId__c.field-meta.xml
<CustomField>
    <fullName>DCRecoveryIllnessId__c</fullName>
    <description>This field is used to store recovery illness Id</description>
    <label>DCRecoveryIllnessId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>