force-app/main/default/objects/SSP_Member__c/fields/DeathConfirmationCode__c.field-meta.xml
<CustomField>
    <fullName>DeathConfirmationCode__c</fullName>
    <description>This field used to store the death confirmation code</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>DeathConfirmationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>