force-app/main/default/objects/SSP_Member__c/fields/DeathDate__c.field-meta.xml
<CustomField>
    <fullName>DeathDate__c</fullName>
    <description>This field is used to store Date of Death of a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>