force-app/main/default/objects/SSP_Member__c/fields/DeathDateVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>DeathDateVerificationCode__c</fullName>
    <description>This field is used to store death date verification code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DeathDateVerificationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>