force-app/main/default/objects/SSP_Member__c/fields/DHSComments__c.field-meta.xml
<CustomField>
    <fullName>DHSComments__c</fullName>
    <description>This field is used to store DHS Comments from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DHS Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>