force-app/main/default/objects/SSP_Member__c/fields/DisabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>DisabilityStatus__c</fullName>
    <description>This field is used to store disability status</description>
    <label>Disability Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>PermanentOrTemporary</valueSetName>
        
        </valueSet>
</CustomField>