force-app/main/default/objects/SSP_Member__c/fields/DisabilityVerificationCode__c.field-meta.xml
<CustomField>
    <fullName>DisabilityVerificationCode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to store disability verification code received during Interface call</description>
    <label>DisabilityVerificationCode</label>
    <type>Checkbox</type>
</CustomField>