force-app/main/default/objects/SSP_Member__c/fields/DivorceDate__c.field-meta.xml
<CustomField>
    <fullName>DivorceDate__c</fullName>
    <description>This Field captures member&apos;s Divorce agreement Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Divorce/separation agreement date</label>
    <type>Date</type>
</CustomField>