force-app/main/default/objects/SSP_Member__c/fields/DocumentExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentExpiryDate__c</fullName>
    <description>This field is used to store Document Expiry date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Expiry Date</label>
    <type>Date</type>
</CustomField>