force-app/main/default/objects/SSP_Member__c/fields/DocumentOtherDescription__c.field-meta.xml
<CustomField>
    <fullName>DocumentOtherDescription__c</fullName>
    <description>This field is used to store the description of the document if any other</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Document Other Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>