force-app/main/default/objects/SSP_Member__c/fields/EligibilityStatementCode__c.field-meta.xml
<CustomField>
    <fullName>EligibilityStatementCode__c</fullName>
    <description>This field is used to store Eligibility Statement Code from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Statement Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>