force-app/main/default/objects/SSP_Member__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field is used to store email of a Member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>