force-app/main/default/objects/SSP_Member__c/fields/EmergencyBeginDate__c.field-meta.xml
<CustomField>
    <fullName>EmergencyBeginDate__c</fullName>
    <description>This field is used to store emergency Medical condition Begin date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Emergency Medical Condition Begin</label>
    <type>Date</type>
</CustomField>