force-app/main/default/objects/SSP_Member__c/fields/EmergencyEndDate__c.field-meta.xml
<CustomField>
    <fullName>EmergencyEndDate__c</fullName>
    <description>This field is used to store emergency medical condition end date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Emergency Medical Condition End</label>
    <type>Date</type>
</CustomField>