force-app/main/default/objects/SSP_Member__c/fields/EthnicityCode__c.field-meta.xml
<CustomField>
    <fullName>EthnicityCode__c</fullName>
    <description>This field is used to store Ethnicity for a member</description>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Ethnicity</valueSetName>
        
        </valueSet>
</CustomField>