force-app/main/default/objects/SSP_Member__c/fields/ExpectedReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedReturnDate__c</fullName>
    <description>This field is used to store the expected date when a member returned to home</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Date to Return Home</label>
    <type>Date</type>
</CustomField>