force-app/main/default/objects/SSP_Member__c/fields/ExternalAlienSponsor__c.field-meta.xml
<CustomField>
    <fullName>ExternalAlienSponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store external Alien Sponsor for member</description>
    <label>External Alien Sponsor</label>
    <referenceTo>SSP_AlienSponsor__c</referenceTo>
    <relationshipLabel>SSP Members (External Alien Sponsor)</relationshipLabel>
    <relationshipName>SSP_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>