force-app/main/default/objects/SSP_Member__c/fields/FederalCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>FederalCaseNumber__c</fullName>
    <description>This field is used to store Federal Case Number from VLP interface call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Federal Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>