force-app/main/default/objects/SSP_Member__c/fields/FederalReserve__c.field-meta.xml
<CustomField>
    <fullName>FederalReserve__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to indicate a related institution (Federal reserve) for a member</description>
    <label>FederalReserve</label>
    <referenceTo>SSP_Institution__c</referenceTo>
    <relationshipLabel>SSP Members (FederalReserve)</relationshipLabel>
    <relationshipName>SSP_Members</relationshipName>
    <type>Lookup</type>
</CustomField>