force-app/main/default/objects/SSP_Member__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>This field is used to store Firstname on a Member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>