force-app/main/default/objects/SSP_Member__c/fields/FosterStateCode__c.field-meta.xml
<CustomField>
    <fullName>FosterStateCode__c</fullName>
    <description>This field is used to store state where Individual was in Foster Care system</description>
    <label>Foster State Code</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPState</valueSetName>
        
        </valueSet>
</CustomField>