force-app/main/default/objects/SSP_Member__c/fields/GenderCode__c.field-meta.xml
<CustomField>
    <fullName>GenderCode__c</fullName>
    <description>This field is used to store Gender on a member</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>SSPGender</valueSetName>
        
        </valueSet>
</CustomField>