force-app/main/default/objects/SSP_Member__c/fields/HasAlienSponsorToggle__c.field-meta.xml
<CustomField>
    <fullName>HasAlienSponsorToggle__c</fullName>
    <description>This field is used to indicate whether the member has Alien Sponsor</description>
    <label>Has alien sponsor?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>