force-app/main/default/objects/SSP_Member__c/fields/HasAlimonyExpenseToggle__c.field-meta.xml
<CustomField>
    <fullName>HasAlimonyExpenseToggle__c</fullName>
    <description>This field is used to store whether Alimony expense is available for a member</description>
    <label>Has alimony expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>