force-app/main/default/objects/SSP_Member__c/fields/HasCashReloadableMoneyCardToggle__c.field-meta.xml
<CustomField>
    <fullName>HasCashReloadableMoneyCardToggle__c</fullName>
    <description>This field is used to indicate whether cash reloadable money card resource is available</description>
    <label>Has CashReloadable Money Card ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>