force-app/main/default/objects/SSP_Member__c/fields/HasDeathDateChanged__c.field-meta.xml
<CustomField>
    <fullName>HasDeathDateChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if death date is changed post data pre population</description>
    <label>HasDeathDateChanged</label>
    <type>Checkbox</type>
</CustomField>