force-app/main/default/objects/SSP_Member__c/fields/HasDependentCareExpenseToggle__c.field-meta.xml
<CustomField>
    <fullName>HasDependentCareExpenseToggle__c</fullName>
    <description>This field is used to indicate whether the member has dependent care expense</description>
    <label>Has depedent care expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>