force-app/main/default/objects/SSP_Member__c/fields/HasDifferentMailingAddressToggle__c.field-meta.xml
<CustomField>
    <fullName>HasDifferentMailingAddressToggle__c</fullName>
    <description>This field is used to store if individual has different mailing address than HOH</description>
    <label>Have Different Mailing Address ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>