force-app/main/default/objects/SSP_Member__c/fields/HasDisabledExpensesToggle__c.field-meta.xml
<CustomField>
    <fullName>HasDisabledExpensesToggle__c</fullName>
    <description>This field is used to indicate whether the member has disabled expenses</description>
    <label>Has disabled expense?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>