force-app/main/default/objects/SSP_Member__c/fields/HasDividendsRoyaltiesToggle__c.field-meta.xml
<CustomField>
    <fullName>HasDividendsRoyaltiesToggle__c</fullName>
    <description>This field is used to indicate whether the member has Dividend royalties</description>
    <label>Has dividend royalties?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>