force-app/main/default/objects/SSP_Member__c/fields/HasEarnedIncomeFromEmploymentToggle__c.field-meta.xml
<CustomField>
    <fullName>HasEarnedIncomeFromEmploymentToggle__c</fullName>
    <description>This field is used to indicate whether member has Earned income from employment</description>
    <label>Has Earned Income From Employment?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>