force-app/main/default/objects/SSP_Member__c/fields/HasEmergencyMedicalConditionToggle__c.field-meta.xml
<CustomField>
    <fullName>HasEmergencyMedicalConditionToggle__c</fullName>
    <description>This field is used to indicate whether member has Emergency medical condition</description>
    <label>Has Emergency Medical Condition ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>