force-app/main/default/objects/SSP_Member__c/fields/HasEndStageRenalDiseaseToggle__c.field-meta.xml
<CustomField>
    <fullName>HasEndStageRenalDiseaseToggle__c</fullName>
    <description>This field is used to store if an individual has end stage renal disease? </description>
    <label>Has End Stage Renal Disease ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>