force-app/main/default/objects/SSP_Member__c/fields/HasFederalIncarcerationInformation__c.field-meta.xml
<CustomField>
    <fullName>HasFederalIncarcerationInformation__c</fullName>
    <description>This field is used to indicate whether Federal Incarceration Information is available from SSA interface call</description>
    <label>Has Federal Incarceration Information ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>