force-app/main/default/objects/SSP_Member__c/fields/HasHouseholdHomeless__c.field-meta.xml
<CustomField>
    <fullName>HasHouseholdHomeless__c</fullName>
    <description>This field is used to indicate whether the household is homeless</description>
    <label>Has Household Homeless</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>