force-app/main/default/objects/SSP_Member__c/fields/HasHouseholdPaidAlimonyToggle__c.field-meta.xml
<CustomField>
    <fullName>HasHouseholdPaidAlimonyToggle__c</fullName>
    <description>toggle picklist field for question has this member paid alimony expense</description>
    <label>Have you paid Alimony ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>