force-app/main/default/objects/SSP_Member__c/fields/HasHouseholdPaidChildSupportToggle__c.field-meta.xml
<CustomField>
    <fullName>HasHouseholdPaidChildSupportToggle__c</fullName>
    <description>This field is used to indicate whether the household paid child support</description>
    <label>Has household paid child support?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>