force-app/main/default/objects/SSP_Member__c/fields/HasInsuranceSettlementBenefitToggle__c.field-meta.xml
<CustomField>
    <fullName>HasInsuranceSettlementBenefitToggle__c</fullName>
    <description>This field is used to store whether the member has insurance settlement benefits</description>
    <label>Has insurance settlement benefit?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>