force-app/main/default/objects/SSP_Member__c/fields/HasInvestmentsToggle__c.field-meta.xml
<CustomField>
    <fullName>HasInvestmentsToggle__c</fullName>
    <description>This field is used to store whether member has Investments Resources</description>
    <label>Has Investments ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>