force-app/main/default/objects/SSP_Member__c/fields/HasLegalImmigrationStatusToggle__c.field-meta.xml
<CustomField>
    <fullName>HasLegalImmigrationStatusToggle__c</fullName>
    <description>This field is used to indicate whether member has legal Immigration status</description>
    <label>Has legal immegration status?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>