force-app/main/default/objects/SSP_Member__c/fields/HasLifeInsuranceToggle__c.field-meta.xml
<CustomField>
    <fullName>HasLifeInsuranceToggle__c</fullName>
    <description>This field is used to indicate whether the member has life insurance resources</description>
    <label>Has Life insurance ?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>