force-app/main/default/objects/SSP_Member__c/fields/HasLivedInUsToggle__c.field-meta.xml
<CustomField>
    <fullName>HasLivedInUsToggle__c</fullName>
    <description>This field is used to indicate whether the member has lived in US</description>
    <label>Has lived in US?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>