force-app/main/default/objects/SSP_Member__c/fields/HasMaintenanceIncomeToggle__c.field-meta.xml
<CustomField>
    <fullName>HasMaintenanceIncomeToggle__c</fullName>
    <label>Has maintenance income?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>