force-app/main/default/objects/SSP_Member__c/fields/HasMedicalBillsToggle__c.field-meta.xml
<CustomField>
    <fullName>HasMedicalBillsToggle__c</fullName>
    <description>This field is used to indicate whether member has medical bills</description>
    <label>Has medical bills?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>YesNo</valueSetName>
        
        </valueSet>
</CustomField>